<resources>
    <string name="app_name">FlyVPN</string>
    <string name="action_settings">设置</string>
    <string name="action_login">登录</string>
    <string name="action_user">账户</string>
    <string name="button_register">注册</string>
    <string name="button_signout">登出</string>
    <string name="edittext_username">账号</string>
    <string name="edittext_password">密码</string>
    <string name="textview_node">节点列表</string>
    <string name="switch_global">全局模式</string>
    <string name="button_proxylist">代理列表</string>
    <string name="togglebutton_texton">结束代理</string>
    <string name="togglebutton_textoff">开始代理</string>
    <string name="textview_username">用户名</string>
    <string name="textview_flow">剩余流量</string>
    <string name="textview_recharge_left">充值流量</string>
    <string name="textview_recharge_right">GB</string>
    <string name="button_recharge">充值</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
</resources>
