<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".ui.MainActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:padding="20dp"
                  android:orientation="vertical">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/textview_node"
                  android:textSize="18sp"/>

        <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/refreshlayout_nodelist"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <ListView android:id="@+id/listview_node"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_margin="5dp"/>

        </android.support.v4.widget.SwipeRefreshLayout>


        <Switch android:id="@+id/switch_global"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/switch_global"
                android:layout_gravity="end"/>

        <Button android:id="@+id/button_proxylist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_proxylist"
                android:layout_gravity="end"/>

        <ToggleButton android:id="@+id/togglebutton_proxy"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:checked="false"
                      android:textOn="@string/togglebutton_texton"
                      android:textOff="@string/togglebutton_textoff"/>

    </LinearLayout>

</ScrollView>