<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">


    <EditText android:id="@+id/edittext_username"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/edittext_username"
              android:drawableLeft="@drawable/icon_user"
              android:drawablePadding="8dp"/>


    <EditText android:id="@+id/edittext_password"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/edittext_password"
              android:drawableLeft="@drawable/icon_password"
              android:drawablePadding="8dp"
              android:inputType="textPassword"/>

    <Button android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_login"
            android:textSize="18sp"/>

</LinearLayout>