<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.UserActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:padding="20dp">
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/textview_username"
                      android:textSize="16sp"
                      android:layout_alignParentLeft="true"/>
            <TextView android:id="@+id/textview_username"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/textview_username"
                      android:textSize="16sp"
                      android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/textview_flow"
                      android:textSize="16sp"
                      android:layout_alignParentLeft="true"/>
            <TextView android:id="@+id/textview_flow"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="16sp"
                      android:text="@string/textview_flow"
                      android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <Button android:id="@+id/button_signout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_signout"/>
    </LinearLayout>

</ScrollView>